RESOLVED FIXED294008
[GTK][WPE] LayerTreeHost doesn't need to inherit from GraphicsLayerClient
https://bugs.webkit.org/show_bug.cgi?id=294008
Summary [GTK][WPE] LayerTreeHost doesn't need to inherit from GraphicsLayerClient
Carlos Garcia Campos
Reported 2025-06-04 00:10:37 PDT
It's a leftover from previous refactoring.
Attachments
Carlos Garcia Campos
Comment 1 2025-06-04 00:12:29 PDT
EWS
Comment 2 2025-06-04 01:38:18 PDT
Committed 295799@main (6b8e2b21e655): <https://commits.webkit.org/295799@main> Reviewed commits have been landed. Closing PR #46308 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.