[GTK][WPE] LayerTreeHost doesn't need to inherit from GraphicsLayerClient https://bugs.webkit.org/show_bug.cgi?id=294008

Reviewed by Miguel Gomez.

It's a leftover from previous refactoring.

Canonical link: https://commits.webkit.org/295799@main